# amigo-fineliner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STATUS.md
crates/fineliner-core/: Cargo.toml
crates/fineliner-core/src/: error.rs  lib.rs
crates/fineliner-core/src/codec/: mod.rs
crates/fineliner-core/src/color/: mod.rs
crates/fineliner-core/src/command/: layers.rs  mod.rs  pixels.rs  resize.rs
crates/fineliner-core/src/document/: buffer.rs  canvas.rs  layer.rs  mod.rs
crates/fineliner-core/src/geometry/: mod.rs
crates/fineliner-core/src/render/: blend.rs  mod.rs
crates/fineliner-core/src/tools/: eraser.rs  eyedropper.rs  fill.rs  mod.rs  move_tool.rs
crates/fineliner-core/tests/: compose_proptest.rs  pencil_round_trip.rs
crates/fineliner-wasm/: Cargo.toml
crates/fineliner-wasm/src/: lib.rs
docs/specs/: fineliner.md
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/components/canvas/: MainCanvas.svelte
ui/src/lib/components/panels/: ColorsPanel.svelte
ui/src/lib/components/toolbar/: ToolBar.svelte  ToolOptions.svelte
ui/src/lib/core/: controller.ts  wasm.ts
ui/src/lib/render/: canvas2d.ts
ui/src/lib/stores/: editor.svelte.ts
ui/src/lib/tools/: pointer.ts
