[workspace]
resolver = "2"
members = [
    "crates/fineliner-core",
    # "crates/fineliner-wasm" is added in M5.
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amigo-labs/amigo-fineliner"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "gif",
    "tiff",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
