[package]
name = "fineliner-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure logic core for the Fineliner image editor: document model, commands, rendering, codecs."

[dependencies]
uuid.workspace = true
thiserror.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = "1"
proptest = "1"
