[package]
name = "fineliner-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm-bindgen bindings exposing fineliner-core to JavaScript."

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt requires downloading binaryen; disabled so builds work offline.
# Re-enable in CI where binaryen is available for smaller output.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
fineliner-core = { path = "../fineliner-core" }
# Enables uuid's JS getrandom backend so v4 UUIDs work under wasm32 (ADR-005).
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
